# mp3326-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/: CODEOWNERS
src/: lib.rs  regs.rs  types.rs
